20-media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          hostPath:
            path: /tank/app/arr/radarr
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /tank/media
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /tank/media/downloads
            type: DirectoryOrCreate
