20-media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: media-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - radarr.neleoz.com
      secretName: radarr-tls
  rules:
    - host: radarr.neleoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
